nivasa-macros/tests/trybuild/validation_is_string_invalid.stderr
error: expected a string field for `#[is_string]`
 --> tests/trybuild/validation_is_string_invalid.rs:5:5
  |
5 |     #[is_string]
  |     ^
