nivasa-macros/tests/trybuild/validation_is_string_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct ProfileForm {
    #[is_string]
    display_name: u32,
}

fn main() {}
